--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,18 @@
+@import "./Fonts/allFonts.css";
+*{
+  font-family:Base;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
 @layer components{
   html{
-    @apply p-0 m-0 box-border overflow-x-hidden font-base;
+    @apply p-0 m-0 box-border overflow-x-hidden;
   }
   .ant-tabs, .ant-tabs-top{
-    @apply flex flex-row w-full cursor-pointer select-none mr-20;
+    @apply flex flex-col md:flex-row w-full cursor-pointer select-none mr-20;
   }
   .ant-tabs-tab-active{
     @apply text-pinkmedium;
@@ -15,8 +20,17 @@
   .ant-tabs-content-holder{
     @apply w-full object-cover ml-20;
   }
+  .ant-tabs-nav{
+    @apply flex items-center;
+  }
   .ant-tabs-nav-list{
-    @apply flex flex-col text-2xl space-y-6 w-full overflow-x-hidden;
+    @apply flex items-baseline mb-2 flex-row md:flex-col text-2xl space-y-6 space-x-3 w-full whitespace-nowrap;
+  }
+  .dropdown-menu{
+    transform: translateY(-50em);
+  }
+  .dropdown-menu .show{
+    transform: translateY(0em);
   }
 }
   @media (max-width: 768px){
